--- a/test.ipynb
+++ b/test.ipynb
@@ -600,20 +600,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "88b82ad9-ebe6-4227-a899-bbf7a495f898",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['sheet-pan-chicken-fajitas',\n",
+       " 'buttermilk-pancakes',\n",
+       " 'beef-stew',\n",
+       " 'classic-french-toast',\n",
+       " 'peach-cobbler',\n",
+       " 'simple-chicken-parmesan',\n",
+       " 'italian-grinder-chopped-salad',\n",
+       " 'marinated-flank-steak',\n",
+       " 'corn-salad',\n",
+       " 'pupusas',\n",
+       " 'mexican-quinoa-salad',\n",
+       " 'hamburger-recipe',\n",
+       " 'corn-salad',\n",
+       " 'coleslaw',\n",
+       " 'mexican-quinoa-salad',\n",
+       " 'baked-beans',\n",
+       " 'pickled-red-onions',\n",
+       " 'gallo-pinto',\n",
+       " 'crispy-baked-chicken-wings',\n",
+       " 'spinach-artichoke-dip',\n",
+       " 'thai-chicken-lettuce-wraps',\n",
+       " 'classic-cheese-ball',\n",
+       " 'peach-cobbler',\n",
+       " 'german-chocolate-cake',\n",
+       " 'tres-leches-cake',\n",
+       " 'hersheys-perfectly-chocolate-chocolate-cake',\n",
+       " 'vanilla-mug-cake',\n",
+       " 'homemade-caramels',\n",
+       " 'homemade-eggnog',\n",
+       " 'horchata',\n",
+       " 'strawberry-lemonade',\n",
+       " 'fresh-squeezed-lemonade',\n",
+       " 'italian-grinder-chopped-salad',\n",
+       " 'marinated-flank-steak',\n",
+       " 'cannoli-cake',\n",
+       " 'corn-salad',\n",
+       " 'air-fryer-tofu',\n",
+       " 'ginger-shots',\n",
+       " 'ice-cream-sandwiches',\n",
+       " 'pupusas',\n",
+       " 'coleslaw',\n",
+       " 'mexican-quinoa-salad',\n",
+       " 'rhubarb-pie',\n",
+       " 'hamburger-recipe',\n",
+       " 'bbq-menu',\n",
+       " 'chocolate-crinkle-cookies',\n",
+       " 'baked-beans',\n",
+       " 'scotcheroos',\n",
+       " 'strawberry-rhubarb-crisp',\n",
+       " 'browned-butter-chocolate-chunk-cookies',\n",
+       " 'spring-roll-bowl',\n",
+       " 'mason-jar-salad']"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dish_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "63dc4297-e024-4afa-926b-40c895dcad29",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "52"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(dish_list)"
    ]
